--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+Data/net-data/256_256_resfcn256_weight.data-00000-of-00001
+train
+val
 build/
 develop-eggs/
 dist/
